Complete A2  CUDA Bonus Part.

--- a/libpedsim/Makefile
+++ b/libpedsim/Makefile
@@ -3,7 +3,7 @@ SOURCES = $(shell echo *.cpp)
 OBJECTS = $(SOURCES:.cpp=.o)
 CUDA_SOURCES = $(shell echo *.cu)
 CUDA_OBJECTS = $(CUDA_SOURCES:.cu=.co)
-CXXFLAGS = -fPIC -shared -lm -fopenmp -march=native 
+CXXFLAGS = -g -DDEBUG -fPIC -shared -lm -fopenmp -march=native 
 CUDA_NVCC_FLAGS = --compiler-options -fPIC,-shared -Xcompiler -fopenmp -Xcompiler -march=native
 
 all: $(TARGET)
